--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.6.8",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.3"
   },
   "devDependencies": {
     "eslint": "^8",
